ucurry/tests/test_suite/negative_test/negative_fun_apply1.uc
-- semantic error: apply three arguments to a function waiting for two arguments
fun : int -> int -> int:
add2 x y = x + y;
(add2 1 2 3);
